--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,157 @@
+*{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	scroll-behavior: smooth;
+}
+
+.LandingPG{
+	position: relative;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+  height: 450px;
+  max-height: 450px;
+	transition: .1s;
+	padding: 100px;
+	background-size: cover;
+	background-position: center;
+}
+
+
+header{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: 30px 100px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+header .logo{
+	position: relative;
+	font-weight: 600;
+	margin-left: 29px;
+	font-size: 29px;
+	color: red;
+	text-transform: uppercase;
+	text-decoration: none;
+	letter-spacing: 2px;
+}
+
+header .nav{
+	position: relative;
+	display: flex;
+}
+
+header .nav li{
+	list-style: none;
+}
+
+header .nav li a{
+	display: inline-block;
+	color: white;
+	font-weight: bold;
+	margin-top: 5px;
+	text-decoration: none;
+	font-size: 13px;
+	padding: 15px 22px;
+	text-transform: none;
+
+}
+
+
+header .nav li a:hover{
+	color: red;
+}
+
+header .nav li a span{
+	padding: 10px 18px;
+	outline: none;
+	border-radius: 5px;
+	color: white;
+	font-weight: bold;
+	font-size: 13px;
+	background-color: black;
+}
+
+header .nav li a span:hover{
+	background-color: red;
+	color: white;
+	transition: 1s;
+}
+
+.content{
+	position: relative;
+	margin-top: 2px;
+	margin-left: 2px;
+	display: flex;
+  height: 300px;
+  max-height: 300px;
+	width: 75%;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.content .text-area h1{
+    text-transform: uppercase;
+    font-size: 47px;
+    margin-bottom: 6px;
+    color: white;
+    width: 60%;
+    font-weight: bolder;
+    letter-spacing: 3px;
+}
+
+.content .text-area h2{
+    font-size: 16px;
+    margin-bottom: 6px;
+    color: white;
+    margin-top: 10px;
+    min-width: 100px;
+    font-weight: 500;
+}
+
+.content .text-area h3{
+	text-transform: none;
+	margin-top: 15px;
+	font-size: 16px;
+	color: white;
+	letter-spacing: 10px;
+}
+
+.content .text-area h4{
+	text-transform: none;
+	font-size: 15px;
+	margin-bottom: 3px;
+	color: white;
+	letter-spacing: 2px;
+}
+
+.content .text-area a{
+	display: inline-block;
+	padding: 14px 24px;
+	margin-top: 5px;
+	text-transform: uppercase;
+	font-size: 14px;
+	color: white;
+	letter-spacing: 2px;
+	border-radius: 5px;
+	font-weight: bold;
+	background-color: black;
+	text-decoration: none;
+}
+.content .text-area a:hover{
+	background-color: red;
+	color: white;
+	transition: 1s;
+}
+
+
 
 .close{
   position: absolute;
@@ -119,7 +273,7 @@ h1 {
   align-items: flex-start;
   z-index: 1000;
   overflow: hidden;
-  background-color: rgba(0,0,0,0.7);
+  background-color: #bdc3c7;
 }
 .modal.modal-show {
   animation: fadeIn 0.1s ease-in-out forwards;
@@ -159,7 +313,8 @@ h1 {
   box-shadow: initial;
   width: 100%;
   height: 91%;
-  background-color: #fff;
+  color: #000000;
+  background-color: #f1f1f1;
   max-height: 93%;
   text-align: justify;
   overflow-y: scroll;
@@ -307,12 +462,68 @@ h1 {
   .modal:nth-of-type(3) .modal-content { width: 80%; }
   .modal:nth-of-type(5) .modal-content { max-width: 85%; }
 }
+.banner {
+  background-image: url('images/banner.jpg');
+  background-size: cover;
+  background-position: center center;
+  color: white;
+  object-fit: contain;
+  height: 448px;
+}
+
+.banner__contents {
+  margin-left: 30px;
+  padding-top: 140px;
+  height: 190px;
+}
+
+.banner__title {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.3rem;
+}
+
+.banner__description {
+  width: 45rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  font-size: 0.8rem;
+  max-width: 360px;
+  height: 180px;
+}
+
+.banner__button {
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  border-radius: 0.2vw;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.banner__button:hover {
+  color: #000;
+  background-color: #e6e6e6;
+  transition: all 0.2s;
+}
+
+.banner--fadeBottom {
+  margin-top: 145px;
+  height: 7.4rem;
+  background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+}
 .wrapper{
   display: flex;
   max-width: 990px;
   width: 990px;
   position: relative;
-  border: 2px solid #000000;
+  border: 2px solid #bdc3c7;
   padding-bottom: 0.1em;
 }
 .wrapper i{
@@ -359,7 +570,7 @@ h1 {
   pointer-events: none;
 }
 .imag{
-  height: 310px;
+  height: 220px;
   object-fit: cover;
   border-left: 1px solid #bdc3c7;
   user-select: none;
@@ -378,4 +589,278 @@ h1 {
   .carousel img{
     width: 100%;
   }
+}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Oswald|Roboto&display=swap');
+body {
+ background-color: #555555;
+}
+html {
+ scroll-behavior: smooth;
+}
+.topnav {
+ overflow: hidden;
+ position: absolute;
+ display: inline-block;
+ top:0;
+ left:0;
+ right:0;
+}
+.topnav a {
+ float: left;
+ padding: 14px 16px;
+ text-align: center;
+ text-decoration: none;
+ color: lightgrey;
+ font-family: 'Roboto', sans-serif;
+ font-size: 0.8em;
+}
+.topnav a:hover {
+ color: white;
+}
+#div_1 {
+  width: 90%;
+  background: #FBFBFB;
+  display:inline-block;
+  position:relative;
+  box-shadow: 1px 1px 30px rgba(0, 0, 0, .1);
+}
+
+#div_2 {
+  width: 30%;
+  position:absolute;
+  right:10%;
+  top:-10px;
+  bottom:-10px;
+  vertical-align: top;
+  background: #FBFBFB;
+  box-shadow: 1px 1px 30px rgba(0, 0, 0, .1);
+}
+#div_wrapper{
+  text-align:center;
+  margin:50px 0px;
+  }
+#logo {
+ height: 50px;
+ width: 50px;
+   margin-top: 130%;
+   left:0;
+}
+#myVideo {
+
+position: absolute;
+ right: 0;
+ bottom:0;
+ min-width: 100%;
+ min-height: 100%;
+ background-image:url('https://thumbs.gfycat.com/AffectionateInfiniteGuernseycow-size_restricted.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.content {
+ position: absolute;
+ justify-content: left;
+ bottom: 0;
+ margin-right: 1em;
+ background: rgba( 0, 0, 0, 0.1);
+ color: #f1f1f1;
+ width: 200vh;
+ height: 200vh;
+ padding: 20px;
+ left:0;
+ display: inline-block;
+ border-bottom:1px solid white;
+}
+
+#h-main {
+ font-family: 'Oswald', sans-serif;
+ font-size: 1.3em;
+ margin-left: 0.5em;
+ text-decoration: overline;
+}
+
+h {
+ font-family: 'Oswald', sans-serif;
+ font-size: 1.3em;
+ margin-left: 0.5em;
+ margin-top:0.5em;
+position: relative;
+ color: white;
+}
+p {
+ font-family: 'Roboto', sans-serif;
+ font-size: 1em;
+ margin-left: auto;
+ margin-right: auto;
+ padding-left: 1.3em;
+ padding-right: 1.3em;
+ margin-top: 0.7em;
+}
+#item {
+
+ font-size: 1.5em;
+}
+
+#content {
+ font-size: 0.8em;
+ line-height: 1.5em;
+}
+#myBtn {
+ margin-left: 1em;
+ font-size: 18px;
+ font-style: bold;
+ padding: 10px;
+ border: none;
+ background-color: rgba(100,100,100,0.6);
+ color: white;
+ cursor: pointer;
+ position: relative;
+}
+#myBtn:hover {
+ background-color: white;
+ color: black;
+}
+.leftbox {
+ height:95vh;
+ width: 99vh;
+ display: inline-block;
+color: #f1f1f1;
+ position: absolute;
+ top:0;
+}
+.rightbox {
+ height:200vh;
+ width: 50vh;
+ float: right;
+ top:0;
+ right:0;
+ color: #f1f1f1;
+ justify-content: right;
+ display: inline-block;
+ position: absolute;
+}
+#pgsign {
+ height: 15px;
+ width: 50px;
+ border-left: 4px solid white;
+ background-color: rgba(100,100,100);
+ font-size: 0.8em;
+ float: right;
+ margin-right: 1em;
+ margin-top: 25em;
+ justify-content: right;
+ text-align: center;
+ padding: 5px;
+}
+#netflix-logo {
+ height: 50px;
+ width: 50px;
+ margin-top:0.5em;
+ margin-left:0.5em;
+ }
+#netflix-toplogo {
+ height: 30px;
+ width: 100px;
+ top:0;
+}
+.bottom-vids {
+ height:230px;
+ display: inline-block;
+ color: #f1f1f1;
+ position: relative;
+ left:0;
+ right:0;
+ margin-top:40%;
+ overflow-x: auto;
+ overflow-y: auto;
+ width: 100%;
+}
+#bottom-vids {
+ height:  230px;
+ width: 250px;
+ display: inline-block;
+ transition: transform .4s;
+}
+#bottom-vids:hover {
+ transform: scale(1.3);
+}
+::-webkit-scrollbar {
+ width: 10px;
+}
+::-webkit-scrollbar-track {
+ background: rgba(100,100,100,0.2);
+}
+::-webkit-scrollbar-thumb {
+ background: #141414;
+}
+::-webkit-scrollbar-thumb:hover {
+ background: #555;
+}
+a {
+ text-decoration: none;
+ color: rgba(100,100,100, 0.2);
+}
+.featured {
+ background-image: url('https://theplumlist.com/wp-content/uploads/2019/08/GLOW-season-3-on-Netflix.jpg');
+ background-repeat: no-repeat;
+ background-size: cover;
+ filter: blur(4px);
+ width: 100%;
+ height: 630px;
+ filter: grayscale(.7);
+}
+.featured-layer {
+ background: linear-gradient(to bottom, rgba(0,0,0,0.9), rgba(0,0,0,0.8));
+ height: 630px;
+}
+.featured-vid {
+ float: left;
+ margin-left: 1em;
+ margin-top: 3em;
+ width: 600px;
+ position: absolute;
+ display: inline-block;
+ filter: none;
+}
+.featured-text {
+ position: absolute;
+ display: inline-block;
+ color: white;
+ font-size: 1em;
+ font-family: 'Lato';
+ float: right;
+ right:0;
+ padding-right: 2em;
+ margin-top: 5%;
+ justify-content: right;
+ width: 400px;
+ line-height: 1.7em;
+}
+
+.bottom-vids2 {
+ height:230px;
+ display: inline-block;
+ color: #f1f1f1;
+ position: relative;
+ left:0;
+ right:0;
+ overflow-x: auto;
+ overflow-y: auto;
+ width: 100%;
+}
+.tall {
+ position: absolute;
+ height: 500px;
+ width: 96%;
+ display: inline-block;
+ margin-left: 2.5em;
+ overflow-y: auto;
+}
+#tall {
+  transition: transform .4s;
+  height:550px;
+   width:300px;
+}
+#tall:hover {
+ transform: scale(1.2);
 }
