--- a/styles.css
+++ b/styles.css
@@ -267,7 +267,6 @@ h1 {
   top: 5%;
   width: 650px;
   height: 650px;
-  border: 3px solid #343F4F;
   display: none;
   justify-content: center;
   align-items: flex-start;
@@ -307,12 +306,12 @@ h1 {
 }
 .modal .modal-content {
   margin: 0;
-  padding: 2rem 1rem;
+  padding: 0;
   border-radius: 0;
-  bottom: .3em;
+  bottom: 0;
   box-shadow: initial;
   width: 100%;
-  height: 91%;
+  height: 100%;
   color: #000000;
   background-color: #f1f1f1;
   max-height: 93%;
@@ -451,16 +450,16 @@ h1 {
 
 @media(max-width: 992px) {
   html { font-size: 14px; }
-  .modal-content { width: 80%; }
+  .modal-content { width: 99%; }
 }
 @media(max-width:767px) {
   html { font-size: 12px; }
-  .modal-content { padding: 2rem 1rem 1rem 1rem; width: 90%; }
+  .modal-content { padding: 2rem 1rem 1rem 1rem; width: 99%; }
   .modal-content h1 { margin-bottom: 1.5rem; }
   .modal:nth-of-type(2) .modal-content { padding: 2rem 3rem; }
   .modal:nth-of-type(3) { justify-content: center; }
-  .modal:nth-of-type(3) .modal-content { width: 80%; }
-  .modal:nth-of-type(5) .modal-content { max-width: 85%; }
+  .modal:nth-of-type(3) .modal-content { width: 99%; }
+  .modal:nth-of-type(5) .modal-content { max-width: 99%; }
 }
 .banner {
   background-image: url('images/banner.jpg');
@@ -550,7 +549,7 @@ h1 {
 }
 .wrapper i:first-child{
   left: -22px;
-  display: none;
+  display: block;
 }
 .wrapper i:last-child{
   right: -22px;
