--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ body {
 .feature__image:hover {
    background-image: linear-gradient(to bottom right,#f4f4f4 ,bisque);
   color: red;
-  transform: scale(1.9);
+  transform: scale(1.7);
   cursor: pointer;
 }
 .feature__backgroud__video__container {
@@ -540,9 +540,10 @@ footer {
 	justify-content: space-between;
 	align-items: center;
 	display: flex;
-  height: 450px;
-  max-height: 450px;
+  height: 410px;
+  max-height: 410px;
 	transition: .1s;
+  margin-left: -15%;
 	padding: 100px;
 	background-size: cover;
 	background-position: center;
@@ -559,14 +560,21 @@ header{
 	justify-content: space-between;
 	align-items: center;
 }
+.logo {
+  margin: 15px 15px 5px 0;
+  width: 225px;
+  height: 35px;
+  border-radius: 5%;
+  background: linear-gradient(to bottom left, #bdc3c7 15%, #bdc3c7);
+  position: relative;
+}
 
 header .logo{
 	position: relative;
-	font-weight: 600;
-	margin-left: 29px;
-	font-size: 29px;
-	color: red;
-	text-transform: uppercase;
+	font-weight: 400;
+	margin-left: 11%;
+	font-size: 32px;
+  color: red;
 	text-decoration: none;
 	letter-spacing: 2px;
 }
@@ -720,20 +728,20 @@ h1 {
 
 #best_movie {
   display: flex;
-  height: fit-content;
+  height: initial;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
   color:#f4f4f4 ;
-  margin-bottom: 30px;
+  margin-bottom: 3px;
 }
 
 .best_movie_title {
-  width: 100%;
-  padding-left: 15%;
+  width: 75%;
+  padding-left: -5%;
   padding-bottom: 5%;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: left;
   float:left;
   border: 0px;
 }
@@ -741,12 +749,12 @@ h1 {
 .best_movie_title p {
   margin: 1em 1em 0 1em;
   min-width: 8em;
-  font-size: 4em;
+  font-size: 2em;
   margin-bottom: 40px;
 }
 
 .summaryBestMovie {
-  font-size: 2em !important;
+  font-size: 1.2em !important;
   text-align: justify;
   padding-left: 0px;
 }
@@ -775,6 +783,7 @@ h1 {
   margin: 0 2%;
   border-radius:2em;
   box-sizing: border-box;
+  font-family: "Palatino Linotype";
   text-decoration:none;
   font-size: 2em;
   color:#f4f4f4;
@@ -1096,7 +1105,6 @@ h1 {
   pointer-events: none;
 }
 .imag{
-  height: 220px;
   object-fit: cover;
   border-left: 1px solid #bdc3c7;
   user-select: none;
